the single quotes were formatted

--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<%= javascript_pack_tag ‘hello_react’ %>
+<%= javascript_pack_tag 'hello_react' %>
 <h1>Committees</h1>
 
 
