--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,1 @@
-<h1>Events#index</h1>
-<p>Find me in app/views/events/index.html.erb</p>
+<%= javascript_pack_tag 'agenda', data: raw(events.to_json), id: 'agenda-events' %>
