Adds annotate gem and adjusts events controller to include show and index methods

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,1 @@
-<%= javascript_pack_tag 'agenda', data: raw(events.to_json), id: 'agenda-events' %>
+<%= javascript_pack_tag 'agenda', data: raw(@events.to_json), id: 'agenda-events' %>
